# svg-viewer

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  REQUIREMENTS.md
assets/: icon.icns
src/: app.rs  clip_index.rs  elements_pane.rs  filter.rs  filter_pane.rs  main.rs  parser.rs  renderer.rs  spatial_index.rs  svg_doc.rs  visibility.rs
